--- a/.github/workflows/instagram-rss.yml
+++ b/.github/workflows/instagram-rss.yml
@@ -9,7 +9,7 @@ jobs:
         uses: actions/checkout@v2
       - name: RSS
         id: rss
-        uses: katydecorah/instagram-rss-action@0.1.0
+        uses: katydecorah/instagram-rss-action@v0.2.0
         with:
           yourInstagram: chasingcardboard
           listOfInstagrams: nytcooking
